Markup: use whitespace-pre-wrap (fix multiline bios on Mastodon)

--- a/app/soapbox/components/markup.css
+++ b/app/soapbox/components/markup.css
@@ -1,3 +1,7 @@
+[data-markup] {
+  @apply whitespace-pre-wrap;
+}
+
 [data-markup] p {
   @apply mb-4 whitespace-pre-wrap;
 }
